# api

./: .gitignore  .pre-commit-config.yaml  README.md  docs.yml  local.yml  manage.py  production.yml  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.envs/.production/: .django
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile  start
compose/production/django/: Dockerfile  start
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
tc_chat/: conftest.py  urls.py
tc_chat/authentication/: serializers.py  urls.py  views.py
tc_chat/chats/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
tc_chat/contrib/auth/: password_validation.py
tc_chat/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
tc_chat/custom_excpetions/: chat_groups.py  groups.py
tc_chat/services/: authentication.py
tc_chat/templates/: base.html
tc_chat/users/: adapters.py  apps.py  models.py  views.py
tc_chat/users/api/: serializers.py  views.py
tc_chat/users/management/commands/: create_always_living_groups.py  mock_data.py
tc_chat/users/migrations/: 0001_initial.py
tc_chat/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_swagger.py  test_tasks.py  test_urls.py  test_views.py
tests/: test_merge_production_dotenvs_in_dotenv.py
